--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn
+# Yarn 3 files
+.pnp.*
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
 
 # testing
 /coverage
