--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-particles": "^2.11.0"
   },
   "devDependencies": {
     "@types/node": "20.3.2",
