--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "prettier-plugin-tailwindcss": "^0.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-particles": "^2.11.0"
+    "react-particles": "^2.11.0",
+    "tsparticles": "^2.11.1",
+    "tsparticles-engine": "^2.11.1"
   },
   "devDependencies": {
     "@types/node": "20.3.2",
