--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier-plugin-tailwindcss": "^0.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-particles": "^2.11.0",
     "tsparticles": "^2.11.1",
     "tsparticles-engine": "^2.11.1"
