--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "devDependencies": {
     "eslint-config-custom": "*",
-    "prettier": "^3.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.3",
-    "turbo": "latest"
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "turbo": "1.10.13"
   },
   "name": "turborepo-example",
   "packageManager": "yarn@1.22.15",
