--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.4.1",
     "@headlessui/react": "^1.7.14",
     "@react-spring/web": "^9.7.3",
     "cobe": "^0.6.3",
+    "framer-motion": "^10.16.4",
+    "next": "^13.4.1",
     "react-intersection-observer": "^9.5.2",
     "react-particles": "^2.11.0",
     "tsparticles": "^2.11.1",
