--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@react-spring/web": "^9.7.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "cobe": "^0.6.3",
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.279.0",
     "next": "^13.4.1",
     "react-intersection-observer": "^9.5.2",
     "react-particles": "^2.11.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^2.11.1",
     "tsparticles-engine": "^2.11.1",
     "ui": "*"
