--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@react-spring/web": "^9.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
