--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "docs",
-  "version": "1.0.0",
+  "name": "app",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3002",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "^13.4.1",
-    "nextra": "^2.11.0",
-    "nextra-theme-docs": "^2.11.0",
     "ui": "*"
   },
   "devDependencies": {
