--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -3,26 +3,22 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "next dev --port 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "^13.4.1",
+    "nextra": "^2.11.0",
+    "nextra-theme-docs": "^2.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ui": "*"
   },
   "devDependencies": {
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "autoprefixer": "^10.4.14",
     "eslint-config-custom": "*",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "tsconfig": "*",
-    "typescript": "^4.5.3"
+    "tailwind-config": "*",
+    "tsconfig": "*"
   }
 }
