--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -9,29 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "^13.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@headlessui/react": "^1.7.14",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
     "@react-spring/web": "^9.7.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
     "cobe": "^0.6.3",
     "framer-motion": "^10.16.4",
-    "lucide-react": "^0.279.0",
-    "next": "^13.4.1",
     "react-intersection-observer": "^9.5.2",
     "react-particles": "^2.11.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7",
     "tsparticles": "^2.11.1",
     "tsparticles-engine": "^2.11.1",
     "ui": "*"
   },
   "devDependencies": {
+    "@types/node": "^17.0.12",
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
+    "autoprefixer": "^10.4.14",
     "eslint-config-custom": "*",
-    "tailwind-config": "*",
-    "tsconfig": "*"
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "tsconfig": "*",
+    "typescript": "^4.5.3"
   }
 }
