--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@turbo/gen": "^1.9.7",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
-    "prettier": "^2.5.1",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "turbo": "^1.10.14"
   },
   "packageManager": "yarn@1.22.15",
