--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -27,6 +27,6 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "tsconfig": "*",
-    "typescript": "^4.5.3"
+    "typescript": "5.0.4"
   }
 }
