--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,7 +17,7 @@
     "react": "^17.0.2",
     "tailwindcss": "^3.2.4",
     "tsconfig": "*",
-    "typescript": "^4.5.2"
+    "typescript": "5.0.4"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
