--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -19,11 +19,13 @@
     "wagmi": "^1.4.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.199",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.14",
     "eslint-config-custom": "*",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "tsconfig": "*",
